[tool.poetry]
# See for more information on the metadata:
#   https://python-poetry.org/docs/pyproject/
# The version entry must be present, however it is further ignored by the build
# process; the version is automatically set by using ``poetry-dynamic-versioning``.
name = "boi_verschil_en_effectanalyse"
version = "0.0.0"
description = "Add a short description here!"
authors = ["Cas van Bemmelen <cas.van.bemmelen@witteveenbos.com>"]
license = "Proprietary - Witteveen+Bos & HKV"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.8"
pandas = "^3.0.0"
cmocean = "^4.0.3"
xlrd = "^2.0.2"
openpyxl = "^3.1.5"
geopandas = "^1.1.2"
ipywidgets = "^8.1.8"
contextily = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"
ipykernel = "^7.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = "4.5"
package = "boi_verschil_effect"
extensions = ["wb_simple"]
